✅ Beirao's audit report added (fix typos)

--- a/audits/Beirao-05-09-2023.md
+++ b/audits/Beirao-05-09-2023.md
@@ -80,9 +80,9 @@ The following smart contracts were in scope of the audit: (**803 SLoC**)
 
 Summary :
 
-- 2 \*\*\*\*Highs
-- **1** Medium
-- 2 \*\*\*\*Lows
+- 2 Highs
+- 1 Medium
+- 2 Lows
 - 4 Informationals
 - 3 Gas
 
@@ -352,9 +352,9 @@ Remove the `unchecked` in the `MonoPool._send()` method. [MonoPool.sol#L326](htt
 
 ## Severity
 
-**Impact:** Medium - \*\*\*\*the slippage may be misconfigured resulting in partial fund losses.
+**Impact:** Medium - the slippage may be misconfigured resulting in partial fund losses.
 
-**Likelihood:** Medium - \*\*\*\*we rely on the frontend to match `msg.value` and `amount`.
+**Likelihood:** Medium - we rely on the frontend to match `msg.value` and `amount`.
 
 ## Description
 
